tests/ui/transmute-src-not-intobytes.nightly.stderr
error[E0463]: can't find crate for `zerocopy`
 --> $DIR/../include.rs:9:1
  |
9 | extern crate zerocopy;
  | ^^^^^^^^^^^^^^^^^^^^^^ can't find crate

warning: unused import: `NotZerocopy`
  --> $DIR/transmute-src-not-intobytes.rs:11:12
   |
11 | use util::{NotZerocopy, AU16};
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0463`.
